# hippotorch

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-cpu.txt  requirements-cu121.txt  requirements-dev.txt  requirements-extras.txt  requirements.txt
.github/workflows/: workflow.yml
docs/: CHANGELOG.md  benchmarks.md  cartpole.md  consolidation_benchmark.md  curriculum.md  dependencies.md  diagnostics.md  fetchreach.md  hybrid_sampling.md  minigrid.md  notebook_probes.md  roadmap_progress.md  sensitivity.md  trap_benchmark.md  usage.md  visualization.md  wake_sleep.md
examples/: amnesiac_corridor.py  cartpole_multiseed_eval.py  cartpole_sensitivity.py  cartpole_wakesleep.py  consolidation_clustering.py  corridor_multiseed.py  fetchreach_random_wakesleep.py  minigrid_wakesleep.py  sensitivity_consolidation.py
hippotorch/: __init__.py
hippotorch/agents/: dqn.py
hippotorch/analysis/: __init__.py  attention.py  projector.py
scripts/: check_ann_stub.sh  compare_cartpole.sh  corridor_curriculum.sh  corridor_multiseed_zn.sh  corridor_oracle_zn.sh  corridor_zero_noise.sh  log_tb_embedding.sh  plot_corridor_regret.py  quick_cartpole.sh  run_consolidation_micro.sh  run_consolidation_micro_identity.sh  run_rank_ablation.sh  sequence_windows_sanity.sh
tests/: conftest.py  test_consolidator_ablation.py  test_curriculum.py  test_episode_memory.py  test_hub_portability.py  test_new_features.py  test_observability_intrinsic.py  test_prototype_visual.py  test_regression_harness.py  test_sampling_schedule.py  test_sb3_wrapper.py  test_wake_sleep.py
(+23 files in other folders)
